Added title and popups.

--- a/vienna-50m/index.html
+++ b/vienna-50m/index.html
@@ -18,6 +18,8 @@
 
 <body>
 
+	<div id="title">Lokalitäten in Wien mit 50m Radius:</div>
+
 	<div id="controls">
 		<div class="legend"><b>Legende:</b></div>
 		<div>
