Added Zoom link.

--- a/austrian-party/index.html
+++ b/austrian-party/index.html
@@ -26,7 +26,7 @@
 		</div>
 		
 		<div style="font-size: 15pt; font-weight: bold; color: steelblue">
-			<br />Link will be posted here soon...
+			<br /><a href=" https://zoom.us/j/97121052289?pwd=Q0NKcDl5Ym9qL2lGOHJYWGRlbmpXZz09" target="_blank">Join Zoom Meeting</a>
 		</div>
 	</div>
 
