--- a/user-study/index.html
+++ b/user-study/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.182ca6b8cc774798330e.css"></head>
 <body>
   <app-root></app-root>
-</body>
+<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.35a5ca1855eb057f016a.js" defer></script><script src="scripts.a73844de5f291be94c3b.js" defer></script><script src="main.f7c85168b7fcbd5d0a69.js" defer></script></body>
 </html>
