Updated personal homepage.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,439 @@
-<html>
-
+<!DOCTYPE HTML>
+<html lang="en">
 <head>
-	
-	<title>Johanna Schmidt :: Github</title>
+	<title>Portfolio :: Johanna Schmidt :: Data Visualisation Researcher</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
 
-	<meta charset="UTF-8" />
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700%7CAllura" rel="stylesheet">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
+	<link href="index-source/css/bootstrap.min.css" rel="stylesheet">
+	<link href="index-source/css/ionicons.css" rel="stylesheet">
+	<link href="index-source/css/styles.css" rel="stylesheet">
+	<link href="index-source/css/responsive.css" rel="stylesheet">
+
 </head>
-
 <body>
 
-	<a href="vienna-50m/">Vienna 50m</a>
+	<!-- ------------------------ Header ------------------------ -->
+
+	<header>
+		<div class="container">
+			<div class="heading-wrapper">
+				<div class="row">
+					<div class="col-sm-6 col-md-6 col-lg-4">
+						<div class="info">
+							<i class="icon ion-ios-location-outline"></i>
+							<div class="right-area">
+								<h5>Donau-City-Straße 11</h5>
+								<h5>1220 Vienna</h5>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-sm-6 col-md-6 col-lg-4">
+						<div class="info">
+							<i class="icon ion-ios-telephone-outline"></i>
+							<div class="right-area">
+								<h5>Work: +43 1 9089892302</h5>
+								<h5>Mobile: +43 699 11686240</h5>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-sm-6 col-md-6 col-lg-4">
+						<div class="info">
+							<i class="icon ion-ios-chatboxes-outline"></i>
+							<div class="right-area">
+								<h5>johanna.schmidt@vrvis.at</h5>
+								<h6>REPLY IN 24 HOURS</h6>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</header>
+
+
+	<!-- ------------------------ Intro ------------------------ -->
+
+	<section class="intro-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-1 col-lg-2"></div>
+				<div class="col-md-10 col-lg-8">
+					<div class="intro">
+						<div class="profile-img"><img src="index-source/images/portrait.jpg" alt=""></div>
+						<h2><b>Johanna Schmidt</b></h2>
+						<h4 class="font-highlight">Head of Research Group at VRVis</h4>
+						<ul class="information margin-tb-30">
+							<li><b>EMAIL : </b>johanna.schmidt@vrvis.at</li>
+							<li><b>LOCATION : </b>Vienna, Austria</li>
+							<li><b>BORN : </b>June 13, 1982</li>
+						</ul>
+						<ul class="social-icons">
+							<li><a href="https://www.linkedin.com/in/johanna-schmidt-36480a147/" target="_blank">
+								<i class="ion-social-linkedin"></i></a>
+							</li>
+							<li><a href="https://www.instagram.com/scientist.atwork/" target="_blank">
+								<i class="ion-social-instagram"></i></a>
+							</li>
+							<li><a href="https://www.facebook.com/johanna.schmidt.391" target="_blank">
+								<i class="ion-social-facebook"></i></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- ------------------------ Portfolio ------------------------ -->
+
+	<section class="portfolio-section">
+
+		<!-- Links -->
+
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Portfolio</b></h3>
+						<h6 class="font-lite-black"><b>PROJECTS AND RESULTS</b></h6>
+					</div>
+				</div>
+				<div class="col-sm-8">
+					<div class="portfolioFilter clearfix margin-b-80">
+						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
+						<a href="#" data-filter=".projects"><b>PROJECTS</b></a>
+						<a href="#" data-filter=".publications"><b>PUBLICATIONS</b></a>
+						<a href="#" data-filter=".media"><b>MEDIA</b></a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Content -->
+
+		<div class="portfolioContainer">
+
+			<div class="p-item projects">
+				<a href="https://www.vrvis.at/forschung/forschungsprojekte/ingress" target="_blank">
+					<img src="index-source/images/portfolio-projects-ingress.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item projects">
+				<a href="https://www.vrvis.at/forschung/forschungsprojekte/railing" target="_blank">
+					<img src="index-source/images/portfolio-projects-railing.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item media">
+				<a href="https://science.orf.at/stories/3203132/" target="_blank">
+					<img src="index-source/images/portfolio-media-orfscience2020.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item publications">
+				<a href="https://www.vrvis.at/publications/PB-VRVis-2020-041" target="_blank">
+					<img src="index-source/images/portfolio-publication-scriptinginterfaces.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item publications">
+				<a href="https://www.mdpi.com/2306-5729/5/4/94" target="_blank">
+					<img src="index-source/images/portfolio-publication-climatedata.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item media">
+				<a href="https://industriemagazin.at/a/vrvis-forscherin-schmidt-es-ist-wenig-zielfuehrend-die-ki-auf-fehlerhafte-datenbestaende-loszulassen" target="_blank">
+					<img src="index-source/images/portfolio-media-industriemagazin2020.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item projects">
+				<a href="https://johanna-schmidt.github.io/vienna-50m/" target="_blank">
+					<img src="index-source/images/portfolio-projects-vienna50m.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item publications">
+				<a href="https://www.vrvis.at/publications/PB-VRVis-2020-015" target="_blank">
+					<img src="index-source/images/portfolio-publication-notebooks.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item publications">
+				<a href="https://onlinelibrary.wiley.com/doi/10.1111/cgf.13987" target="_blank">
+					<img src="index-source/images/portfolio-publication-topograph.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item media">
+				<a href="https://oe1.orf.at/ugcsubmission/view/7c49b319-b278-4365-a457-65741e6c259c/Vrvis-Data-Literacy" target="_blank">
+					<img src="index-source/images/portfolio-media-oe12020.jpg" alt="">
+				</a>
+			</div>
+
+			<div class="p-item publications">
+				<a href="https://www.scitepress.org/Link.aspx?doi=10.5220/0009181903090316" target="_blank">
+					<img src="index-source/images/portfolio-publication-libraries.jpg" alt="">
+				</a>
+			</div>
+
+		</div>
+
+	</section>
+
+
+	<!-- ------------------------ About ------------------------ -->
+
+	<section class="about-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>About me</b></h3>
+						<h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
+					</div>
+				</div>
+				<div class="col-sm-8">
+
+					<p class="margin-b-50">
+						I received a Ph.D. in data visualisation in 2016 at the TU Wien, Austria.
+						My current research focuses on the visual analysis of large data, mainly manufacturing
+						data coming from industry companies and time-series data. I am the head of the group
+						<i>Visual Analytics</i> at the VRVis research center (VRVis Zentrum für Virtual Reality
+						und Visualisierung Forschungs-GmbH) in Vienna.
+					</p>
+
+					<div class="row">
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-30">
+								<div class="radial-progress" data-prog-percent=".97">
+									<div></div>
+									<h6 class="progress-title">VISUALISATION</h6>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-30">
+								<div class="radial-progress" data-prog-percent=".48">
+									<div></div>
+									<h6 class="progress-title">DATA LITERACY</h6>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-30">
+								<div class="radial-progress" data-prog-percent=".62">
+									<div></div>
+									<h6 class="progress-title">DATA SCIENCE</h6>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".85">
+									<div></div>
+									<h6 class="progress-title">CODING</h6>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</section>
+
+
+	<!-- ------------------------ Work Experience ------------------------ -->
+
+	<section class="experience-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Work Experience</b></h3>
+						<h6 class="font-lite-black"><b>PROFESSIONAL CAREER</b></h6>
+					</div>
+				</div>
+				<div class="col-sm-8">
+
+					<div class="experience margin-b-50">
+						<h4><b>HEAD OF RESEARCH GROUP</b></h4>
+						<h5 class="font-highlight">
+							<b>VRVIS ZENTRUM FÜR VIRTUAL REALITY UND VISUALISIERUNG FORSCHUNGS-GMBH</b>
+						</h5>
+						<h6 class="margin-t-10">JULY 2020 - PRESENT</h6>
+						<p class="font-semi-white margin-tb-30">
+							Group lead, project acquisition, project management.
+						</p>
+					</div>
+
+					<div class="experience margin-b-50">
+						<h4><b>RESEARCHER</b></h4>
+						<h5 class="font-highlight">
+							<b>VRVIS ZENTRUM FÜR VIRTUAL REALITY UND VISUALISIERUNG FORSCHUNGS-GMBH</b>
+						</h5>
+						<h6 class="margin-t-10">APRIL 2019 - JUNE 2020</h6>
+						<p class="font-semi-white margin-tb-30">
+							Research and development, project acquisition, project management.
+						</p>
+					</div>
+
+					<div class="experience margin-b-50">
+						<h4><b>SCIENTISTS</b></h4>
+						<h5 class="font-highlight">
+							<b>AIT AUSTRIAN INSTITUTE OF TECHNOLOGY GMBH</b>
+						</h5>
+						<h6 class="margin-t-10">SEPTEMBER 2016 - APRIL 2019</h6>
+						<p class="font-semi-white margin-tb-30">
+							Research and development, project acquisition, project management.
+						</p>
+					</div>
+
+					<div class="experience margin-b-50">
+						<h4><b>UNIVERSITY ASSISTANT</b></h4>
+						<h5 class="font-highlight">
+							<b>TU WIEN</b>
+						</h5>
+						<h6 class="margin-t-10">DEZEMBER 2011 - AUGUST 2016</h6>
+						<p class="font-semi-white margin-tb-30">
+							Research and development, teaching.
+						</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+	</section>
+
+
+	<!-- ------------------------ Education ------------------------ -->
+
+	<section class="education-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Education</b></h3>
+						<h6 class="font-lite-black"><b>QUALIFICATION</b></h6>
+					</div>
+				</div>
+				<div class="col-sm-8">
+					<div class="education-wrapper">
+
+						<div class="education margin-b-50">
+							<h4><b>PHD</b></h4>
+							<h5 class="font-highlight"><b>TU WIEN</b></h5>
+							<h6 class="font-lite-black margin-t-10">GRADUATED IN JUNE 2016</h6>
+							<p class="margin-tb-30">
+								Studies: Visual Computing<br />
+								Title of the thesis: <i>Scalable Comparative Visualization - Visual Analysis of
+								Local Features in Different Dataset Ensembles</i>
+							</p>
+						</div>
+
+						<div class="education margin-b-50">
+							<h4><b>MASTER DEGREE (Dipl.-Ing.)</b></h4>
+							<h5 class="font-highlight"><b>TU WIEN</b></h5>
+							<h6 class="font-lite-black margin-t-10">GRADUATED IN NOVEMBER 2011</h6>
+							<p class="margin-tb-30">
+								Studies: Visual Computing<br />
+								Title of the thesis: <i>Interactive Variability Analysis for Initial Sample Testing of
+								Industrial CT Data</i>
+							</p>
+						</div>
+
+						<div class="education margin-b-50">
+							<h4><b>BACHELOR DEGREE (BSc)</b></h4>
+							<h5 class="font-highlight"><b>TU WIEN</b></h5>
+							<h6 class="font-lite-black margin-t-10">GRADUATED IN JUNE 2005</h6>
+							<p class="margin-tb-30">
+								Studies: Medieninformatik<br />
+								Title of the thesis: <i>Practical Implementation of a Texture Synthesis Algorithm</i>
+							</p>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- ------------------------ Counter ------------------------ -->
+
+	<section class="counter-section" id="counter">
+		<div class="container">
+			<div class="row">
+
+				<div class="col-sm-6 col-md-6 col-lg-3">
+					<div class="counter margin-b-30">
+						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="6">0</span></b></h1>
+						<h5 class="desc"><b>Projects</b></h5>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-6 col-lg-3">
+					<div class="counter margin-b-30">
+						<h1 class="title"><b><span class="counter-value" data-duration="1000" data-count="22">0</span></b></h1>
+						<h5 class="desc"><b>Publications</b></h5>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-6 col-lg-3">
+					<div class="counter margin-b-30">
+						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="8">0</span></b></h1>
+						<h5 class="desc"><b>Invited Talks</b></h5>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-6 col-lg-3">
+					<div class="counter margin-b-30">
+						<h1 class="title"><b><span class="counter-value" data-duration="1400" data-count="116">0</span></b></h1>
+						<h5 class="desc"><b>Students</b></h5>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
+
+	<!-- ------------------------ Footer ------------------------ -->
+
+	<footer>
+		<p class="copyright">
+			Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
+			This template is made with <i class="ion-heart" aria-hidden="true"></i>
+			by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+		</p>
+	</footer>
+
+
+	<!-- ------------------------ Scripts ------------------------ -->
+
+	<script src="index-source/js/jquery-3.2.1.min.js"></script>
+	<script src="index-source/js/tether.min.js"></script>
+	<script src="index-source/js/bootstrap.min.js"></script>
+	<script src="index-source/js/isotope.pkgd.min.js"></script>
+	<script src="index-source/js/jquery.waypoints.min.js"></script>
+	<script src="index-source/js/progressbar.min.js"></script>
+	<script src="index-source/js/scripts.js"></script>
 
 </body>
 
