Demo application final.

--- a/ieee-wie/index.html
+++ b/ieee-wie/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>IEEEWomenInEngineering</title>
-  <base href="/ieee-wie/">
+  <base href="/ieee-wie">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.359d5ee4682f20e936e9.js" defer></script><script src="polyfills.f571582bdf7ef5a5fa9b.js" defer></script><script src="main.6c093b73065b01fdad65.js" defer></script></body>
+<script src="runtime.359d5ee4682f20e936e9.js" defer></script><script src="polyfills.f571582bdf7ef5a5fa9b.js" defer></script><script src="main.ebaa7de6766ff9a2d4a3.js" defer></script></body>
 </html>
