Added projects and publications.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,36 @@
 		<!-- Content -->
 
 		<div class="portfolioContainer">
+		
+			<div class="p-item publications">
+				<a href="https://github.com/johanna-schmidt/selective-angular-brushing" target="_blank">
+					<img src="index-source/images/portfolio-publications-selangularbrush.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="p-item media">
+				<a href="https://www.vrvis.at/news-events/news/ein-tag-hat-mehr-als-24-stunden-aus-dem-leben-einer-forscherin" target="_blank">
+					<img src="index-source/images/portfolio-media-dailyroutine.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="p-item media">
+				<a href="https://www.vrvis.at/fileadmin/04_News-Events/00_Pressespiegel/VRVis_Die_Presse_Ein_Spuerhund_fuer_die_Ausreisser_in_meterologischen_Daten_20210403.pdf" target="_blank">
+					<img src="index-source/images/portfolio-media-presse2021.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="p-item publications">
+				<a href="https://www.intechopen.com/online-first/76821" target="_blank">
+					<img src="index-source/images/portfolio-publication-bookchapter1.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="p-item projects">
+				<a href="https://digi-hydro.vrvis.at" target="_blank">
+					<img src="index-source/images/portfolio-projects-digihydro.jpg" alt="">
+				</a>
+			</div>
 
 			<div class="p-item projects">
 				<a href="https://www.vrvis.at/forschung/forschungsprojekte/ingress" target="_blank">
@@ -383,21 +413,21 @@
 
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="6">0</span></b></h1>
-						<h5 class="desc"><b>Projects</b></h5>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="1000" data-count="22">0</span></b></h1>
+						<h1 class="title"><b><span class="counter-value" data-duration="1000" data-count="25">0</span></b></h1>
 						<h5 class="desc"><b>Publications</b></h5>
 					</div>
 				</div>
+				
+				<div class="col-sm-6 col-md-6 col-lg-3">
+					<div class="counter margin-b-30">
+						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="2">0</span></b></h1>
+						<h5 class="desc"><b>Book Chapters</b></h5>
+					</div>
+				</div>
 
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="8">0</span></b></h1>
+						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="9">0</span></b></h1>
 						<h5 class="desc"><b>Invited Talks</b></h5>
 					</div>
 				</div>
