Added new media articles and images for front website.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,25 @@
 		
 			<div class="p-item publications">
 				<a href="https://github.com/johanna-schmidt/selective-angular-brushing" target="_blank">
-					<img src="index-source/images/portfolio-publications-selangularbrush.jpg" alt="">
+					<img src="index-source/images/portfolio-publications-selangularbrush.png" alt="">
+				</a>
+			</div>
+
+			<div class="p-item publications">
+				<a href="https://arxiv.org/abs/2109.06612" target="_blank">
+					<img src="index-source/images/portfolio-publication-histograms.png" alt="">
+				</a>
+			</div>
+
+			<div class="p-item media">
+				<a href="https://www.ots.at/presseaussendung/OTS_20210914_OTS0046/klimaschutzministerium-visual-analytics-johanna-schmidt-ist-femtech-expertin-des-monats" target="_blank">
+					<img src="index-source/images/portfolio-media-femtech2021.png" alt="">
+				</a>
+			</div>
+
+			<div class="p-item media">
+				<a href="https://techshelikes.co/johanna-schmidt/" target="_blank">
+					<img src="index-source/images/portfolio-media-techshelikes2021.png" alt="">
 				</a>
 			</div>
 			
@@ -147,7 +165,7 @@
 			
 			<div class="p-item projects">
 				<a href="https://digi-hydro.vrvis.at" target="_blank">
-					<img src="index-source/images/portfolio-projects-digihydro.jpg" alt="">
+					<img src="index-source/images/portfolio-projects-digihydro.png" alt="">
 				</a>
 			</div>
 
@@ -183,13 +201,13 @@
 
 			<div class="p-item media">
 				<a href="https://industriemagazin.at/a/vrvis-forscherin-schmidt-es-ist-wenig-zielfuehrend-die-ki-auf-fehlerhafte-datenbestaende-loszulassen" target="_blank">
-					<img src="index-source/images/portfolio-media-industriemagazin2020.jpg" alt="">
+					<img src="index-source/images/portfolio-media-industriemagazin2020.png" alt="">
 				</a>
 			</div>
 
 			<div class="p-item projects">
 				<a href="https://johanna-schmidt.github.io/vienna-50m/" target="_blank">
-					<img src="index-source/images/portfolio-projects-vienna50m.jpg" alt="">
+					<img src="index-source/images/portfolio-projects-vienna50m.png" alt="">
 				</a>
 			</div>
 
