--- a/motorbikes/index.html
+++ b/motorbikes/index.html
@@ -33,7 +33,7 @@
             <div class="col">
                 <svg id="scatterplot" width="90%" height="87vh"></svg>
             </div>
-            <div class="col col col-lg-5">
+            <div class="col-lg-5">
                 <svg id="barchart1" width="100%" height="25vh"></svg>
                 <svg id="barchart2" width="100%" height="30vh"></svg>
                 <div id="tableview" class="tableview"></div>
